--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -25,10 +25,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "text/html; charset=UTF-8\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import pickle\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "response = requests.get('https://web.archive.org/web/20210327165005/https://hackaday.com/2021/03/22/how-laser-headlights-work/')\n",
+    "\n",
+    "print(response.status_code)\n",
+    "print(response.headers['content-type'])\n",
+    "\n",
+    "with open('shellenberger_module_06.pkl', 'wb') as file:\n",
+    "    pickle.dump(response.text, file)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,7 +149,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -142,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
