--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -20,7 +20,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Write code that extracts the article html from https://web.archive.org/web/20210327165005/https://hackaday.com/2021/03/22/how-laser-headlights-work/ and dumps it to a .pkl (or other appropriate file)"
+    "#### Question 1\n",
+    "Write code that extracts the article html from https://web.archive.org/web/20210327165005/https://hackaday.com/2021/03/22/how-laser-headlights-work/ and dumps it to a .pkl (or other appropriate file)"
    ]
   },
   {
