--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,8 @@
     "parser = 'html.parser'\n",
     "soup = BeautifulSoup(article_html, parser)\n",
     "article_element = soup.find('article')\n",
-    "print(article_element.get_text())"
+    "article_text = article_element.get_text()\n",
+    "print(article_text)"
    ]
   },
   {
@@ -157,10 +158,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The word laser shows up 35 times in the article\n",
+      "The word headlights shows up 19 times in the article\n",
+      "The word headlight shows up 11 times in the article\n",
+      "The word technology shows up 10 times in the article\n",
+      "The word led shows up 10 times in the article\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "from spacytextblob.spacytextblob import SpacyTextBlob\n",
+    "from collections import Counter\n",
+    "\n",
+    "nlp = spacy.load('en_core_web_sm') #Make sure to download en_core_web_sm from spacy in the terminal\n",
+    "nlp.add_pipe('spacytextblob')\n",
+    "doc = nlp(article_text)\n",
+    "\n",
+    "# Cannot use 'token.lower()' or error will show saying \"'int' object is not callable\"\n",
+    "interesting_token = [token.text.lower() for token in doc if not (token.is_space or token.is_punct or token.is_stop)] #Takes out white space, punctuation, and stopwords\n",
+    "word_freq = Counter(interesting_token) # Counts each token\n",
+    "most_common = word_freq.most_common(5) # Displays the top 5 most frequent token\n",
+    "\n",
+    "for word, freq in most_common:\n",
+    "    print(f'The word {word} shows up {freq} times in the article')"
+   ]
   },
   {
    "cell_type": "markdown",
