--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -55,7 +55,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Read in your article's html source from the file you created in question 1 and print it's text (use `.get_text()`)"
+    "#### Question 2\n",
+    "Read in your article's html source from the file you created in question 1 and print it's text (use `.get_text()`)"
    ]
   },
   {
@@ -153,7 +154,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Load the article text into a trained `spaCy` pipeline, and determine the 5 most frequent tokens (converted to lower case).  Print the common tokens with an appropriate label.  Additionally, print the tokens their frequencies (with appropriate labels). Make sure to remove things we don't care about (punctuation, stopwords, whitespace)."
+    "#### Question 3\n",
+    "Load the article text into a trained `spaCy` pipeline, and determine the 5 most frequent tokens (converted to lower case).  Print the common tokens with an appropriate label.  Additionally, print the tokens their frequencies (with appropriate labels). Make sure to remove things we don't care about (punctuation, stopwords, whitespace)."
    ]
   },
   {
@@ -195,15 +197,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Load the article text into a trained `spaCy` pipeline, and determine the 5 most frequent lemmas (converted to lower case).  Print the common lemmas with an appropriate label.  Additionally, print the lemmas with their frequencies (with appropriate labels). Make sure to remove things we don't care about (punctuation, stopwords, whitespace)."
+    "#### Question 4\n",
+    "Load the article text into a trained `spaCy` pipeline, and determine the 5 most frequent lemmas (converted to lower case).  Print the common lemmas with an appropriate label.  Additionally, print the lemmas with their frequencies (with appropriate labels). Make sure to remove things we don't care about (punctuation, stopwords, whitespace)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The word laser shows up 40 times in the article\n",
+      "The word headlight shows up 28 times in the article\n",
+      "The word beam shows up 12 times in the article\n",
+      "The word technology shows up 10 times in the article\n",
+      "The word led shows up 10 times in the article\n"
+     ]
+    }
+   ],
+   "source": [
+    "interesting_lemma_token = [token.lemma_.lower() for token in doc if not (token.is_space or token.is_punct or token.is_stop)] #Takes out white space, punctuation, and stopwords\n",
+    "lemma_freq = Counter(interesting_lemma_token) # Counts each token\n",
+    "most_common_lemma = lemma_freq.most_common(5) # Displays the top 5 most frequent token\n",
+    "\n",
+    "for word_lemma, freq_lemma in most_common_lemma:\n",
+    "    print(f'The word {word_lemma} shows up {freq_lemma} times in the article')"
+   ]
   },
   {
    "cell_type": "markdown",
