--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -242,8 +242,65 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token score for the first sentence: 0.12\n",
+      "Lemma score for the first sentence: 0.06\n"
+     ]
+    }
+   ],
+   "source": [
+    "def token_count(sent):\n",
+    "    '''\n",
+    "    Counts the number of tokens in a sentence\n",
+    "    with no punctuation and no white space\n",
+    "    returns counts'''\n",
+    "    count = 0\n",
+    "    for token in sent:\n",
+    "        if not(token.is_punct or token.is_space):\n",
+    "            count+=1\n",
+    "    return count\n",
+    "\n",
+    "def score_sentence_by_token(sent, word):\n",
+    "    '''\n",
+    "    Counts the nubmer of tokens compared to\n",
+    "    the most common words from Q3\n",
+    "    prints the ratio compared to total tokens'''\n",
+    "    count = 0\n",
+    "    for token in sent:\n",
+    "        if token.text.lower() in word:\n",
+    "            count+=1\n",
+    "    sent_length = token_count(sent)\n",
+    "    print(f'Token score for the first sentence: {count/sent_length:.2f}')\n",
+    "\n",
+    "def score_sentence_by_lemma(sent, word):\n",
+    "    '''\n",
+    "    Counts the nubmer of lemmas compared to\n",
+    "    the most common lemmas from Q4\n",
+    "    prints the ratio compared to total tokens'''\n",
+    "    count = 0\n",
+    "    for token in sent:\n",
+    "        if token.text.lower() in word:\n",
+    "            count+=1\n",
+    "    sent_length = token_count(sent)\n",
+    "    print(f'Lemma score for the first sentence: {count/sent_length:.2f}')\n",
+    "\n",
+    "sentences = list(doc.sents) # seperates sentences into a list\n",
+    "first = sentences[0] #selects the first sentence of the list\n",
+    "most_common_word = []\n",
+    "most_common_word_lemma = []\n",
+    "for word, freq in most_common:\n",
+    "    # Selects the words from the most_common variable from Q3 and puts it into the list\n",
+    "    most_common_word.append(word)\n",
+    "for word_lemma, freq_lemma in most_common_lemma:\n",
+    "    # Selects the words from the most_common_lemma variable from Q4 and puts it into the list\n",
+    "    most_common_word_lemma.append(word_lemma)\n",
+    "score_sentence_by_token(first, most_common_word)\n",
+    "score_sentence_by_lemma(first, most_common_word_lemma)"
+   ]
   },
   {
    "cell_type": "markdown",
